--- a/app/src/main/res/menu/main_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_bottom_navigation_menu.xml
@@ -4,10 +4,12 @@
         android:id="@+id/main_home_item"
         android:title="@string/main_list_tab_title"
         android:enabled="true"
+        android:icon="@drawable/ic_list"
         />
     <item
         android:id="@+id/main_map_item"
         android:title="@string/main_favorite_tab_title"
         android:enabled="true"
+        android:icon="@drawable/ic_star_inverted"
         />
 </menu>
